# intellexa-ai

./: .env  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
Example/: intellexa_mvp.py
src/: config.py  intellexa_mvp.py  utils.py
src/chains/: qa_chains.py  summarizer.py
src/core/: document_loader.py  text_splitter.py
src/vectore_store/: chromadb_manager.py  vectore_manager.py
