[project]
name = "intellexa-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.1",
    "docx2txt>=0.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-google-vertexai>=2.1.2",
    "pypdf>=6.1.1",
    "streamlit>=1.50.0",
]
